styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* * {
  background-color: black;
} */

.hoverAnimation {
  @apply hover:cursor-pointer
 hover:bg-white hover:bg-opacity-10 xl:p-3 rounded-full w-11 h-11 xl:w-auto xl:h-auto;
}

.iconAnimation {
  @apply hover:bg-opacity-10 hover:bg-[#1d9bf0] cursor-pointer rounded-full w-9 h-9 flex items-center justify-center;
}

